kubernetes/apps/dispatcharr/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: dispatcharr
  namespace: dispatcharr
  annotations:
    external-dns.kubernetes.io/target: <path:cloudflared:tunnel-config#tunnel-target>
    external-dns.kubernetes.io/cloudflare-proxied: "true"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`iptv.<path:cert-manager:domain-config#domain>`)
      kind: Rule
      services:
        - name: dispatcharr
          port: 9191
  tls: {}
